manifests/sec/oauth2-proxy/ref-grant.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: allow-ext-auth-from-other-namespaces
spec:
  from:
  - group: gateway.networking.k8s.io
    kind: HTTPRoute
    namespace: network
  - group: gateway.envoyproxy.io
    kind: SecurityPolicy
    namespace: devops-tools
  - group: gateway.envoyproxy.io
    kind: SecurityPolicy
    namespace: longhorn-system
  - group: gateway.envoyproxy.io
    kind: SecurityPolicy
    namespace: media
  - group: gateway.envoyproxy.io
    kind: SecurityPolicy
    namespace: monitoring
  - group: gateway.envoyproxy.io
    kind: SecurityPolicy
    namespace: network
  - group: gateway.envoyproxy.io
    kind: SecurityPolicy
    namespace: p2p
  to:
  - group: ""
    kind: Service
    name: oauth2-proxy
